--- a/language/en-GB/mod_administratorlinkghsvs.ini
+++ b/language/en-GB/mod_administratorlinkghsvs.ini
@@ -1,4 +1,6 @@
 MOD_ADMINISTRATORLINKGHSVS="Administration in new tab by GHSVS.de"
 MOD_ADMINISTRATORLINKGHSVS_XML_DESCRIPTION="Module for backend template. Adds a link with target <code>/administrator/</code> in a module position to open a new browser tabulator."
 
-MOD_ADMINISTRATORLINKGHSVS_NEW_TAB="New administration tab"
+MOD_ADMINISTRATORLINKGHSVS_NEW_TAB="Open additional administration in new tabulator"
+
+MOD_ADMINISTRATORLINKGHSVS_ADMINISTRATION="Administration"
