Mainly new settings iconClass, labelling, titleAttr.
- Some new language strings.
- Move if (empty($link)) from layouts to mod_administratorlinkghsvs.php.
- New fields/configuration settings iconClass, labelling, titleAttr.
- Manifest. Prepare new build procedure and new settings.
- Helper:
  - Use new Uri(Route.. instead of Uri::root()
  - Add methods for new fields/configuration settings.
- Adapt layouts.

--- a/language/en-GB/mod_administratorlinkghsvs.ini
+++ b/language/en-GB/mod_administratorlinkghsvs.ini
@@ -4,3 +4,12 @@ MOD_ADMINISTRATORLINKGHSVS_XML_DESCRIPTION="Module for backend template. Adds a 
 MOD_ADMINISTRATORLINKGHSVS_NEW_TAB="Open additional administration in new tabulator"
 
 MOD_ADMINISTRATORLINKGHSVS_ADMINISTRATION="Administration"
+
+MOD_ADMINISTRATORLINKGHSVS_ICONCLASS="Icon class"
+MOD_ADMINISTRATORLINKGHSVS_ICONCLASS_DESC="Icon for the button.<br><strong>- Only used in layout <code>Status</code></strong><br>- Default: <code>icon-home</code>.<br>- Enter <code>0</code> for none."
+
+MOD_ADMINISTRATORLINKGHSVS_LABELLING="Labelling"
+MOD_ADMINISTRATORLINKGHSVS_LABELLING_DESC="Label for the button.<br>- Default: <code>MOD_ADMINISTRATORLINKGHSVS_ADMINISTRATION</code>.<br>- Enter <code>0</code> for none."
+
+MOD_ADMINISTRATORLINKGHSVS_TITLEATTR="Title attribute"
+MOD_ADMINISTRATORLINKGHSVS_TITLEATTR_DESC="<code>title</code> text for the button link.<br>- Default: <code>MOD_ADMINISTRATORLINKGHSVS_NEW_TAB</code>.<br>- Enter <code>0</code> for none."
